<resources>
    <string name="app_name">PomodoroTimer</string>
    <string name="start_timer">00:00</string>
    <string name="start_button">start</string>
    <string name="reset_button">reset</string>
    <string name="short_break">short break</string>
    <string name="pomodoro">pomodoro</string>
    <string name="long_break">long break</string>
    <string name="settings">settings</string>
    <string name="settings_activity">settings activity</string>
    <string name="_25">25</string>
    <string name="_5">5</string>
    <string name="_15">15</string>
    <string name="_timer25">25</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="set">set</string>
    <string name="mode">MODE</string>
    <string name="autostart_breaks">AUTOSTART BREAKS</string>
    <string name="autostart_pomodoros">AUTOSTART POMODOROS</string>
</resources>