<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tex"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textview_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-thin"
        android:paddingBottom="20dp"
        android:text="@string/start_timer"
        android:textColor="#C4C4C4"
        android:textSize="100sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457" />

    <Button
        android:id="@+id/mode_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/main_button"
        android:text="@string/pomodoro"
        android:textColor="#C4C4C4"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/textview_timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.719" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="215dp"
        android:layout_height="50dp"
        android:layout_marginStart="158dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="159dp"
        android:background="@drawable/main_button"
        android:text="@string/start_button"
        android:textColor="#C4C4C4"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_timer" />

    <TextView
        android:id="@+id/counter_textview"
        android:layout_width="106dp"
        android:layout_height="36dp"
        android:layout_marginBottom="80dp"
        android:text="0/4"
        android:textColor="#C4C4C4"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_button"
        app:layout_constraintVertical_bias="0.754" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="215dp"
        android:layout_height="50dp"
        android:layout_marginStart="158dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="159dp"
        android:background="@drawable/main_button"
        android:text="@string/reset_button"
        android:textColor="#C4C4C4"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_button" />

    <TextView
        android:id="@+id/mode_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/mode"
        android:textColor="#C4C4C4"
        app:layout_constraintBottom_toTopOf="@+id/mode_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginTop="16dp"
        android:text="@string/settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>